refactor(commands): add ParcelInstanceSuggestionProvider