@@ -5,23 +5,18 @@ import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import io.github.leawind.gitparcel.GitParcelTranslations;
 import io.github.leawind.gitparcel.world.gitparcel.GitParcelLevelSavedData;
 import io.github.leawind.gitparcel.world.gitparcel.ParcelInstance;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Stream;
 import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.commands.SharedSuggestionProvider;
 
 public class ParcelInstanceArgument
     implements ArgumentType<ParcelInstanceArgument.ParcelInstanceSelector> {
   private static final Collection<String> EXAMPLES =
-      Arrays.asList("dd12be42-52a9-4a91-a8a1-11c01849e498", "adder", "My House");
+      List.of("dd12be42-52a9-4a91-a8a1-11c01849e498");
 
   public static final SimpleCommandExceptionType ERROR_TOO_MANY =
       new SimpleCommandExceptionType(
@@ -36,7 +31,7 @@ public class ParcelInstanceArgument
 
   public static ParcelInstance getInstance(CommandContext<CommandSourceStack> context, String name)
       throws CommandSyntaxException {
-    return context.getArgument(name, ParcelInstance.class);
+    return context.getArgument(name, ParcelInstanceSelector.class).get(context.getSource());
   }
 
   @Override
@@ -44,29 +39,6 @@ public class ParcelInstanceArgument
     String input = reader.readString();
     UUID uuid = UUID.fromString(input);
     return new ParcelInstanceSelector(uuid);
-  }
-
-  @Override
-  public <S> CompletableFuture<Suggestions> listSuggestions(
-      CommandContext<S> context, SuggestionsBuilder builder) {
-    if (context.getSource() instanceof CommandSourceStack source) {
-      String remaining = builder.getRemaining();
-
-      // Get the current level to access parcel instances
-      var serverLevel = source.getLevel();
-      var savedData = GitParcelLevelSavedData.get(serverLevel);
-      var instances = savedData.streamParcelInstances();
-
-      // Suggest UUIDs and names
-      var suggestions =
-          instances
-              .flatMap(inst -> Stream.of(inst.uuid().toString()))
-              .filter(s -> s.startsWith(remaining));
-
-      return SharedSuggestionProvider.suggest(suggestions, builder);
-    } else {
-      return Suggestions.empty();
-    }
   }
 
   @Override
